objects/Agency_Transfer__c.object
<CustomObject>
    <customHelpPage>Agency</customHelpPage>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Agency Transfers</relationshipLabel>
        <relationshipName>Transfer_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Facility_Tranche__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility Tranche</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Facility_Tranche__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility_Tranche__c</referenceTo>
        <relationshipLabel>Agency Transfers</relationshipLabel>
        <relationshipName>Agency_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Facility__c.Agreement__c</field>
                <operation>equals</operation>
                <valueField>$Source.Agreement__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Agency Transfers</relationshipLabel>
        <relationshipName>Agency_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Amount__c</fullName>
        <label>Transfer Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfer_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transferee2__c</fullName>
        <formula>IF( Transferee_Tranche__c != null, HYPERLINK(&apos;/&apos; + Transferee_Tranche__r.Id,  Transferee_Tranche__r.Name ), IF(  Transferee_Facility__c != null, HYPERLINK(&apos;/&apos; + Transferee_Facility__r.Id,  Transferee_Facility__r.Name )  , HYPERLINK(&apos;/&apos; + Transferee_Agreement__r.Id,  Transferee_Agreement__r.Name )) )</formula>
        <label>Transferee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferee_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transferee (Agreement)</label>
        <referenceTo>Agreement_Party__c</referenceTo>
        <relationshipLabel>Agency Transfers</relationshipLabel>
        <relationshipName>Agency_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferee_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transferee (Facility)</label>
        <referenceTo>Facility_Party__c</referenceTo>
        <relationshipLabel>Agency Transfers</relationshipLabel>
        <relationshipName>Agency_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferee_Tranche__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transferee (Tranche)</label>
        <referenceTo>Tranche_Party__c</referenceTo>
        <relationshipLabel>Agency Transfers</relationshipLabel>
        <relationshipName>Agency_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transferee</label>
        <referenceTo>Agreement_Party__c</referenceTo>
        <relationshipLabel>Agency Transfers</relationshipLabel>
        <relationshipName>Agency_Transfers3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferor2__c</fullName>
        <formula>IF(Transferor_Tranche__c != null, HYPERLINK(&apos;/&apos; + Transferor_Tranche__r.Id,  Transferor_Tranche__r.Name ), IF(Transferor_Facility__c   != null, HYPERLINK(&apos;/&apos; + Transferor_Facility__r.Id,  Transferor_Facility__r.Name )  , HYPERLINK(&apos;/&apos; + Transferor_Agreement__r.Id,  Transferor_Agreement__r.Name )) )</formula>
        <label>Transferor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferor_Agreement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Transferor (Agreement)</label>
        <referenceTo>Agreement_Party__c</referenceTo>
        <relationshipLabel>Agency Transfers (Transferor)</relationshipLabel>
        <relationshipName>Agency_Transfers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferor_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transferor (Facility)</label>
        <referenceTo>Facility_Party__c</referenceTo>
        <relationshipLabel>Agency Transfers (Transferor)</relationshipLabel>
        <relationshipName>Agency_Transfers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferor_Tranche__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transferor (Tranche)</label>
        <referenceTo>Tranche_Party__c</referenceTo>
        <relationshipLabel>Agency Transfers (Transferor)</relationshipLabel>
        <relationshipName>Agency_Transfers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Transferor</label>
        <referenceTo>Agreement_Party__c</referenceTo>
        <relationshipLabel>Agency Transfers (Transferor)</relationshipLabel>
        <relationshipName>Agency_Transfers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Agency Transfer</label>
    <nameField>
        <displayFormat>TRANS-{0}</displayFormat>
        <label>Transfer #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Transfers</pluralLabel>
    <recordTypes>
        <fullName>Agreement_Agency_Transfer</fullName>
        <active>true</active>
        <label>Agreement Agency Transfer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Facility_Agency_Transfer</fullName>
        <active>true</active>
        <label>Facility Agency Transfer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tranche_Agency_Transfer</fullName>
        <active>true</active>
        <label>Tranche Agency Transfer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>